logs/Slang/chapter-8/8.8--typed_constructor.sv.log
name: typed_constructor
description: class typed constructor test
should_fail: 0
tags: 8.8
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:8:2: error: language feature not yet supported
	class super_cls;
	^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:10:11: error: expected identifier
		function new(int def = 3);
		        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:10:12: error: expected statement
		function new(int def = 3);
		         ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:10:27: error: expected declarator
		function new(int def = 3);
		                        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:15:2: error: language feature not yet supported
	class test_cls extends super_cls;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:17:11: error: expected identifier
		function new(int def = 42);
		        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:17:12: error: expected statement
		function new(int def = 42);
		         ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:17:28: error: expected declarator
		function new(int def = 42);
		                         ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:23:2: error: use of undeclared identifier 'super_cls'
	super_cls super_obj;
	^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.8--typed_constructor.sv:26:15: error: language feature not yet supported
		super_obj = test_cls::new;
		            ^~~~~~~~~~~~~
